[project]
name = "gemma-tool-call-eval"
version = "0.1.0"
description = "Evaluation framework for Gemma 4 26B tool calling capabilities"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
